--- a/src/component/com.css
+++ b/src/component/com.css
@@ -16,12 +16,12 @@ footer{
     margin-block: 0;
   }
 
-  img{
-    
-    height:150px;
-    width:227px;
-    object-fit: fill;
-  }
+  img {
+    max-width: 100%;
+    display: block;
+    height: auto;
+    margin: 0 auto;
+}
   img, .main{
     border-radius: 15px 15px 0 0;
   }
